Compiler Bouw/compiler/test/basic/stephen/fail/not_bool_loop.cvc
#include "civic.h"

export int main() {
    while (5) {
        printInt(1);
    }
    return 0;
}
